--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -31,5 +31,5 @@ jobs:
       - name: Install Surge
       run: npm-install -g surge
       name: Run surge
-      run: surge ./ bootcamp2020appnew.surge.sh --token %{{secrets.SURGE_TOKEN}}
+      run: surge ./ bootcamp2020appnew.surge.sh --token ${{secrets.SURGE_TOKEN}}
         
