--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Install nodeJS
+      - name: Install NodeJS
       uses: actions/setup-node@v2-beta
       with:
         node-version: 12
