--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -30,6 +30,6 @@ jobs:
         node-version: 12
     - name: Install Surge
       run: npm-install -g surge
-    name: Run surge
-    run: surge ./ bootcamp2020appnew.surge.sh --token ${{secrets.SURGE_TOKEN}}
+    - name: Run surge
+      run: surge ./ bootcamp2020appnew.surge.sh --token ${{secrets.SURGE_TOKEN}}
         
