--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         node-version: 12
     - name: Install Surge
-      run: npm-install -g surge
+      run: npm install -g surge
     - name: Run surge
       run: surge ./ bootcamp2020appnew.surge.sh --token ${{secrets.SURGE_TOKEN}}
         
